--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,20 +12,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LifeSavingInsurance">
-        <activity android:name=".Loading"
-            tools:ignore="Instantiatable"></activity>
-        <activity android:name=".Profile">
-
-        </activity>
-        <activity android:name=".InputTransfer"></activity>
+        <activity android:name=".MainActivity2"></activity>
+        <activity
+            android:name=".Loading"
+            tools:ignore="Instantiatable" />
+        <activity android:name=".Profile"></activity>
+        <activity android:name=".InputTransfer" />
         <activity android:name=".Support" />
-        <activity android:name=".Payment"></activity>
+        <activity android:name=".Payment" />
         <activity android:name=".Passcode" />
         <activity android:name=".RegisterMenu" />
-        <activity android:name=".HomeMenu"></activity>
-        <activity android:name=".LoginMenu"></activity>
+        <activity android:name=".HomeMenu" />
+        <activity android:name=".LoginMenu" />
         <activity android:name=".MainActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
