--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LifeSavingInsurance">
         <activity android:name=".AsuransiTradisional"></activity>
-        <activity android:name=".MenuToolbar" />
-        <activity android:name=".MainActivity2" />
+        <activity android:name=".MenuToolbar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+
+
         <activity
             android:name=".Loading"
             tools:ignore="Instantiatable" />
@@ -27,11 +35,7 @@
         <activity android:name=".HomeMenu" />
         <activity android:name=".LoginMenu" />
         <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
