--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LifeSavingInsurance">
-        <activity android:name=".AsuransiTradisional"></activity>
+        <activity android:name=".FormPlan100"></activity>
+        <activity android:name=".AsuransiTradisional" />
         <activity android:name=".MenuToolbar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
