--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LifeSavingInsurance">
-        <activity android:name=".ListAsuransi"></activity>
+        <activity android:name=".plan100_info"></activity>
+        <activity android:name=".ListAsuransi" />
         <activity android:name=".FormPlan100" />
         <activity android:name=".AsuransiTradisional" />
-        <activity android:name=".MenuToolbar"></activity>
+        <activity android:name=".MenuToolbar" />
         <activity
             android:name=".Loading"
             tools:ignore="Instantiatable" />
